kubernetes/collab-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collab
spec:
  selector:
    matchLabels:
      app: collab
  template:
    metadata:
      labels:
        app: collab
    spec:
      containers:
        - name: collab
          image: distractedcat/collab:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              name: collab
