kubernetes/comms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comms
spec:
  selector:
    matchLabels:
      app: comms
  template:
    metadata:
      labels:
        app: comms
    spec:
      containers:
        - name: comms
          image: modembcc/comms:7.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
              name: comms
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
