kubernetes/matching-service-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-service-api
spec:
  selector:
    matchLabels:
      app: matching-service-api
  template:
    metadata:
      labels:
        app: matching-service-api
    spec:
      containers:
        - name: matching-service-api
          image: modembcc/matching-service-api:6.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9200
              name: matching-api
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
