kubernetes/matching-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-service
spec:
  selector:
    matchLabels:
      app: matching-service
  template:
    metadata:
      labels:
        app: matching-service
    spec:
      containers:
        - name: matching-service
          image: distractedcat/matching-service:1.0.0
          imagePullPolicy: IfNotPresent
