kubernetes/peerprep-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peerprep
spec:
  selector:
    matchLabels:
      app: peerprep
  template:
    metadata:
      labels:
        app: peerprep
    spec:
      containers:
        - name: peerprep
          image: distractedcat/peerprep:3.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: peerprep
