kubernetes/storage-blob-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-blob-api
spec:
  selector:
    matchLabels:
      app: storage-blob-api
  template:
    metadata:
      labels:
        app: storage-blob-api
    spec:
      containers:
        - name: storage-blob-api
          image: distractedcat/storage-blob-api:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9300
              name: storage-api
