kubernetes/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: distractedcat/user-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
              name: user-service
