kubernetes/collab-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collab
spec:
  selector:
    app: collab
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 31000
  type: NodePort
