kubernetes/comms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comms
spec:
  selector:
    app: comms
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
  type: LoadBalancer
