kubernetes/formatter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: formatter
spec:
  selector:
    app: formatter
  ports:
  - protocol: TCP
    port: 5000       
    targetPort: 5000  
  type: ClusterIP
