kubernetes/matching-service-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matching-service-api
spec:
  selector:
    app: matching-service-api
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
  type: ClusterIP
