kubernetes/peerprep-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peerprep
spec:
  selector:
    app: peerprep
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
