kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP  # Or ClusterIP depending on your access needs
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
   # nodePort: 9190  # Optional, if you want to specify a NodePort
  selector:
    app: redis
